// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CATEGORY_CONTROL correctly with default value to N/A 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <ControlRange
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
    onChange={[Function]}
    onSubmit={[Function]}
    valueMapper={[Function]}
  >
    <ControlRange__Container>
      <div
        className="ControlRange__Container-ispxkc kkVGKq"
      >
        <ControlRange__LabelWrapper
          labels={
            Array [
              "name1",
              "name2",
            ]
          }
        >
          <div
            className="ControlRange__LabelWrapper-hpKjGx kKFCvQ"
          >
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK idIiax"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR kHKeHO"
                      color="grayBase"
                    >
                      name1
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK idIiax"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR kHKeHO"
                      color="grayBase"
                    >
                      name2
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
          </div>
        </ControlRange__LabelWrapper>
        <ControlRange__InputWrapper
          labels={
            Array [
              "name1",
              "name2",
            ]
          }
        >
          <div
            className="ControlRange__InputWrapper-fklkwO dVxsgp"
          >
            <ControlRange__ValueWrapper
              color="grayBase"
            >
              <P
                className="ControlRange__ValueWrapper-jxMKxr lkxWna"
                color="grayBase"
              >
                <Component
                  className="ControlRange__ValueWrapper-jxMKxr lkxWna P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  <div
                    className="ControlRange__ValueWrapper-jxMKxr lkxWna P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    Current value: 
                    <ControlRange__Value
                      color="primary"
                    >
                      <P
                        className="ControlRange__Value-kXycxr cJYxpn"
                        color="primary"
                      >
                        <Component
                          className="ControlRange__Value-kXycxr cJYxpn P__P-KJbCR dnAaPu"
                          color="primary"
                        >
                          <p
                            className="ControlRange__Value-kXycxr cJYxpn P__P-KJbCR dnAaPu"
                            color="primary"
                          >
                            N/A
                          </p>
                        </Component>
                      </P>
                    </ControlRange__Value>
                  </div>
                </Component>
              </P>
            </ControlRange__ValueWrapper>
            <InputRange
              kind="primary"
              max={1}
              min={0}
              onChange={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              step={1}
              type="range"
            >
              <input
                className="InputRange__InputRange-uGAsR iOVoet"
                kind="primary"
                max={1}
                min={0}
                onChange={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                step={1}
                type="range"
              />
            </InputRange>
          </div>
        </ControlRange__InputWrapper>
      </div>
    </ControlRange__Container>
  </ControlRange>
</DataChannelAdapter>
`;

exports[`should render CATEGORY_CONTROL correctly with first item 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_CONTROL",
      "values": Object {
        "value": "value1",
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlRange
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
    onChange={[Function]}
    onSubmit={[Function]}
    value={0}
    valueMapper={[Function]}
  >
    <ControlRange__Container>
      <div
        className="ControlRange__Container-ispxkc kkVGKq"
      >
        <ControlRange__LabelWrapper
          labels={
            Array [
              "name1",
              "name2",
            ]
          }
        >
          <div
            className="ControlRange__LabelWrapper-hpKjGx kKFCvQ"
          >
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK idIiax"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR kHKeHO"
                      color="grayBase"
                    >
                      name1
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK idIiax"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR kHKeHO"
                      color="grayBase"
                    >
                      name2
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
          </div>
        </ControlRange__LabelWrapper>
        <ControlRange__InputWrapper
          labels={
            Array [
              "name1",
              "name2",
            ]
          }
        >
          <div
            className="ControlRange__InputWrapper-fklkwO dVxsgp"
          >
            <ControlRange__ValueWrapper
              color="grayBase"
            >
              <P
                className="ControlRange__ValueWrapper-jxMKxr lkxWna"
                color="grayBase"
              >
                <Component
                  className="ControlRange__ValueWrapper-jxMKxr lkxWna P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  <div
                    className="ControlRange__ValueWrapper-jxMKxr lkxWna P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    Current value: 
                    <ControlRange__Value
                      color="primary"
                    >
                      <P
                        className="ControlRange__Value-kXycxr cJYxpn"
                        color="primary"
                      >
                        <Component
                          className="ControlRange__Value-kXycxr cJYxpn P__P-KJbCR dnAaPu"
                          color="primary"
                        >
                          <p
                            className="ControlRange__Value-kXycxr cJYxpn P__P-KJbCR dnAaPu"
                            color="primary"
                          >
                            value1
                          </p>
                        </Component>
                      </P>
                    </ControlRange__Value>
                  </div>
                </Component>
              </P>
            </ControlRange__ValueWrapper>
            <InputRange
              kind="primary"
              max={1}
              min={0}
              onChange={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              step={1}
              type="range"
              value={0}
            >
              <input
                className="InputRange__InputRange-uGAsR iOVoet"
                kind="primary"
                max={1}
                min={0}
                onChange={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                step={1}
                type="range"
                value={0}
              />
            </InputRange>
          </div>
        </ControlRange__InputWrapper>
      </div>
    </ControlRange__Container>
  </ControlRange>
</DataChannelAdapter>
`;

exports[`should render CATEGORY_CONTROL correctly with second item 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_CONTROL",
      "values": Object {
        "value": "value2",
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlRange
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
    onChange={[Function]}
    onSubmit={[Function]}
    value={1}
    valueMapper={[Function]}
  >
    <ControlRange__Container>
      <div
        className="ControlRange__Container-ispxkc kkVGKq"
      >
        <ControlRange__LabelWrapper
          labels={
            Array [
              "name1",
              "name2",
            ]
          }
        >
          <div
            className="ControlRange__LabelWrapper-hpKjGx kKFCvQ"
          >
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK idIiax"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR kHKeHO"
                      color="grayBase"
                    >
                      name1
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK idIiax"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR kHKeHO"
                      color="grayBase"
                    >
                      name2
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
          </div>
        </ControlRange__LabelWrapper>
        <ControlRange__InputWrapper
          labels={
            Array [
              "name1",
              "name2",
            ]
          }
        >
          <div
            className="ControlRange__InputWrapper-fklkwO dVxsgp"
          >
            <ControlRange__ValueWrapper
              color="grayBase"
            >
              <P
                className="ControlRange__ValueWrapper-jxMKxr lkxWna"
                color="grayBase"
              >
                <Component
                  className="ControlRange__ValueWrapper-jxMKxr lkxWna P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  <div
                    className="ControlRange__ValueWrapper-jxMKxr lkxWna P__P-KJbCR kHKeHO"
                    color="grayBase"
                  >
                    Current value: 
                    <ControlRange__Value
                      color="primary"
                    >
                      <P
                        className="ControlRange__Value-kXycxr cJYxpn"
                        color="primary"
                      >
                        <Component
                          className="ControlRange__Value-kXycxr cJYxpn P__P-KJbCR dnAaPu"
                          color="primary"
                        >
                          <p
                            className="ControlRange__Value-kXycxr cJYxpn P__P-KJbCR dnAaPu"
                            color="primary"
                          >
                            value2
                          </p>
                        </Component>
                      </P>
                    </ControlRange__Value>
                  </div>
                </Component>
              </P>
            </ControlRange__ValueWrapper>
            <InputRange
              kind="primary"
              max={1}
              min={0}
              onChange={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              step={1}
              type="range"
              value={1}
            >
              <input
                className="InputRange__InputRange-uGAsR iOVoet"
                kind="primary"
                max={1}
                min={0}
                onChange={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                step={1}
                type="range"
                value={1}
              />
            </InputRange>
          </div>
        </ControlRange__InputWrapper>
      </div>
    </ControlRange__Container>
  </ControlRange>
</DataChannelAdapter>
`;
